bad/assign_field_bool_fcall_array.example_compiler_output
ERROR
[1mbad/assign_field_bool_fcall_array.lat:8:12: [1;31merror: [0;1massigning to `boolean` from incompatible type `int[]`[m
	foo().fld = new int[3];
	          [1;32m^[m
